--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ CameraFollow.cs
 CameraFollow.cs.meta
 CharacterController2D.cs
 CharacterController2D.cs.meta
+ThrowsOfDeath.cs
+ThrowsOfDeath.cs.meta
+DeathManager.cs
+DeathManager.cs.meta
